[project]
name = "rag4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "pyaudio>=0.2.14",
    "pypdf>=6.8.0",
    "scikit-learn>=1.8.0",
    "speechrecognition>=3.15.2",
    "streamlit>=1.55.0",
]
